--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container{
+    width: 100%;
+    max-width: 80%;
+    margin: 0px auto;
+}
+
+.green{
+    background-color: green;
+}
+
+@media (max-width: 576px) {
+    .container{
+        width: 100%;
+        max-width: 95%;
+    }
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 14px 0px;
+}
+
+.btn{
+    border-radius: 5px;
+    color: #fff;
+    padding: 6px 12px;
+    cursor: pointer;
+    border: none;
+    font-size: 16px;
+}
+
+.btn:hover {
+    background-color: rgb(35, 35, 35);
+    transition: all 1s;
+}
