make simple task tracker app

--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="btn green" (click)="onClick()">{{text}}</button>
+<button class="btn" [ngStyle]="{backgroundColor: color}" (click)="onClick()">{{text}}</button>
