--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
 <header>
     <h3>{{title}}</h3>
-    <app-button text="Add" (btnClick)="toggleAddTask()"></app-button>
+    <app-button text="{{showAddTask? 'Close':'Add'}}" color="{{showAddTask? 'red':'green'}}"
+        (btnClick)="toggleAddTask()" *ngIf="hasRoute('/')">
+    </app-button>
 </header>
