--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,15 +1,15 @@
-<form class="form" (ngSubmit)="onSubmit()">
+<form *ngIf="showAddTask" class="form" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="task">Task</label>
-        <input type="text" name="task" id="task" class="form-control" [(ngModel)]="task"/>
+        <input type="text" name="task" id="task" class="form-control" [(ngModel)]="task" />
     </div>
     <div class="form-group">
         <label for="day">Day & Time</label>
-        <input type="text" name="day" id="day" class="form-control" [(ngModel)]="day"/>
+        <input type="text" name="day" id="day" class="form-control" [(ngModel)]="day" />
     </div>
     <div class="form-group" style="flex-direction: row;">
         <label for="reminder">Set as Reminder</label>
-        <input type="checkbox" name="reminder" id="reminder" class="form-control" [(ngModel)]="reminder"/>
+        <input type="checkbox" name="reminder" id="reminder" class="form-control" [(ngModel)]="reminder" />
     </div>
-    <input type="submit" value="Add Task" class="btn margin-bottom" style="background-color: black;"/>
+    <input type="submit" value="Add Task" class="btn margin-bottom" style="background-color: black;" />
 </form>
