--- a/src/styles.css
+++ b/src/styles.css
@@ -1,35 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
-*{
+* {
     padding: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.container{
+.container {
     width: 100%;
     max-width: 80%;
     margin: 0px auto;
 }
 
-.green{
+.green {
     background-color: green;
 }
 
 @media (max-width: 576px) {
-    .container{
+    .container {
         width: 100%;
         max-width: 95%;
     }
 }
 
-header{
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 14px 0px;
 }
 
-.btn{
+.btn {
     border-radius: 5px;
     color: #fff;
     padding: 6px 12px;
@@ -39,21 +39,21 @@ header{
 }
 
 .btn:hover {
-    background-color: rgb(35, 35, 35);
+    background-color: rgb(35, 35, 35) !important;
     transition: all 1s;
 }
 
-.form{
+.form {
     margin: 10px auto;
 }
 
-.form-group{
+.form-group {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
 }
 
-.form-control{
+.form-control {
     padding: 8px 12px;
     border-radius: 5px;
     font-size: 20px;
